Solve testimonial layout problems. Testimonial style tweaks. Add testimonial content.

--- a/css/main.css
+++ b/css/main.css
@@ -92,17 +92,28 @@ header {
   #testimonials .reference {
     margin: 0 auto;
     border-radius: 50%;
-    width: 150px; }
+    width: 125px; }
   #testimonials #testimonials-carousel {
-    padding: 1em; }
+    padding: 0;
+    margin-top: 1em; }
     #testimonials #testimonials-carousel .carousel-caption {
-      color: #3c0404;
+      color: #210303;
       position: static;
       padding: 0;
       text-shadow: none; }
+      #testimonials #testimonials-carousel .carousel-caption .testimonial-text {
+        margin-top: 0.5em; }
+      #testimonials #testimonials-carousel .carousel-caption hr {
+        border-color: #210303;
+        margin: 0.5em auto;
+        width: 2em; }
+      #testimonials #testimonials-carousel .carousel-caption h4 {
+        margin-top: 0.5em; }
     #testimonials #testimonials-carousel .carousel-control {
       color: #3c0404;
-      background-image: none; }
+      background-image: none;
+      width: 5%;
+      text-shadow: none; }
 
 #services {
   background: rgba(255, 255, 255, 0.8);
