--- a/css/sass/_development.scss
+++ b/css/sass/_development.scss
@@ -94,22 +94,39 @@ header {
   .reference {
     margin: 0 auto;
     border-radius: 50%;
-    width: 150px;
+    width: 125px;
   }
   
   #testimonials-carousel {
-    padding: 1em;
+    padding: 0;
+    margin-top: 1em;
     
     .carousel-caption {
-      color: $color-1;
+      color: $color-0;
       position: static;
       padding: 0;
       text-shadow: none;
+      
+      .testimonial-text {
+        margin-top: 0.5em;
+      }
+      
+      hr {
+        border-color: $color-0;
+        margin: 0.5em auto;
+        width: 2em;
+      }
+      
+      h4 {
+        margin-top: 0.5em;
+      }
     }
     
     .carousel-control {
       color: $color-1;
       background-image: none;
+      width: 5%;
+      text-shadow: none;
     }
   }
 }
